[package]
name = "mitra_services"
version.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

publish.workspace = true

[dependencies]
# Used for catching errors
anyhow = "1.0.58"
# Used for working with dates
chrono = { version = "0.4.34", default-features = false, features = ["std"] }
# Used for working with ethereum addresses
ethereum-types = { version = "0.15.1", default-features = false }
# Used to work with hexadecimal strings
hex = { version = "0.4.3", features = ["serde"] }
# Used for logging
log = "0.4.20"
# Used to query Monero node
monero-rpc = { version = "0.5.0", default-features = false, features = ["rpc_authentication", "rustls-tls"] }
# Used for working with regular expressions
regex = "1.10.6"
# Used for making async HTTP requests
# Requires quinn even if http3 is disabled: https://github.com/seanmonstar/reqwest/issues/2318
reqwest = { version = "0.12.9", default-features = false, features = ["json", "multipart", "rustls-tls-native-roots"] }
# Used for serialization/deserialization
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
# Used to verify EIP-4361 signatures
siwe = "0.6.0"
# Used for creating error types
thiserror = "1.0.37"

apx_core = { path = "../apx_core" }
mitra_config = { path = "../mitra_config" }
mitra_models = { path = "../mitra_models" }
mitra_utils = { path = "../mitra_utils" }

[features]
test-utils = []

[lints]
workspace = true
