[package]
name = "mitra_utils"
version.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
# Used for HTML sanitization
ammonia = "3.2.0"
html5ever = "0.26.0"
# Used to generate identicons
eth-blockies = "1.1.0"
# Used for working with dates
chrono = { version = "0.4.31", default-features = false, features = ["std", "clock"] }
# Used for parsing markdown
comrak = { git = "https://github.com/kivikakk/comrak", rev = "0f0f659a7ceb0692d83a07ca10de53687c265873", default-features = false }
# Used for extracting text from HTML
html2text = "=0.12.4"
# Used to gather disk info
lfs-core = "=0.11.1"
# Used to determine file extension
mime_guess = "2.0.5"
# Used to generate random numbers
rand = "0.8.4"
# Used for working with regular expressions
regex = "1.10.6"
# Used for hashing passwords
rust-argon2 = "2.1.0"
# Used for creating error types
thiserror = "1.0.37"
# Used to generate lexicographically sortable IDs
ulid = { version = "1.0.0", features = ["uuid"] }
# Used to work with Unicode
unicode-segmentation = "1.10.1"
# Used to work with UUIDs
uuid = "1.1.2"

apx_core = { path = "../apx_core" }

[lints]
workspace = true
