[package]
name = "mitra_utils"
version.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

publish.workspace = true

[dependencies]
# Used for HTML sanitization
ammonia = "4.0.1"
html5ever = "0.27.0"
# Used to generate identicons
eth-blockies = "1.1.0"
# Used for working with dates
chrono = { version = "0.4.34", default-features = false, features = ["std", "clock"] }
# Used for parsing markdown
comrak = { version = "0.40.0", default-features = false, features = ["bon"] }
# Used for extracting text from HTML
html2text = "0.12.6"
# ISO 639 language codes
isolang = { version = "2.4.0", default-features = false }
# Used to determine file extension
mime_guess = "2.0.5"
# Used to generate random numbers
rand = "0.8.4"
rand_chacha = "0.3"
# Used for working with regular expressions
regex = "1.10.6"
# Used for hashing passwords
rust-argon2 = "2.1.0"
# Used for serialization/deserialization
serde = { version = "1.0.210", features = ["derive"] }
# Used to gather disk info
sysinfo = { version = "0.32.1", default-features = false, features = ["disk"] }
# Used for creating error types
thiserror = "1.0.37"
# Used to generate lexicographically sortable IDs
ulid = { version = "~1.0.0", features = ["uuid"] }
# Used to work with Unicode
unicode-segmentation = "1.10.1"
# Used to work with UUIDs
uuid = "~1.12.1"

apx_core = { path = "../apx_core", features = ["caip"] }

[lints]
workspace = true
