[package]
name = "mitra_validators"
version = "2.24.0"
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.63.0"

[dependencies]
# Used for working with regular expressions
regex = "1.9.6"
# Used for working with JSON objects
serde_json = "1.0.89"
# Used for creating error types
thiserror = "1.0.37"
# Used to work with UUIDs
uuid = "1.1.2"

mitra_models = { path = "../mitra_models", default-features = false }
mitra_utils = { path = "../mitra_utils" }

[dev-dependencies]
mitra_models = { path = "../mitra_models", features = ["test-utils"] }
mitra_utils = { path = "../mitra_utils", features = ["test-utils"] }

[features]
default = ["rustls-tls"]

native-tls = ["mitra_models/native-tls"]
rustls-tls = ["mitra_models/rustls-tls"]

[lints]
workspace = true
