[package]
name = "mitra_validators"
version.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

publish.workspace = true

[dependencies]
# Used for working with regular expressions
regex = "1.10.6"
# Used for working with JSON objects
serde_json = "1.0.132"
# Used for creating error types
thiserror = "1.0.37"
# Used to work with UUIDs
uuid = "1.12.1"

apx_core = { path = "../apx_core" }
mitra_models = { path = "../mitra_models" }
mitra_utils = { path = "../mitra_utils" }

[dev-dependencies]
apx_core = { path = "../apx_core", features = ["test-utils"] }
mitra_models = { path = "../mitra_models", features = ["test-utils"] }

[lints]
workspace = true
