[package]
name = "mitra_workers"
version.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

publish.workspace = true

[dependencies]
# Used for catching errors
anyhow = "1.0.58"
# Used for working with dates
chrono = { version = "0.4.34", default-features = false }
# Used for logging
log = "0.4.20"
# Used for serialization/deserialization
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
# Async runtime
tokio = { version = "~1.38.0" }
# Used to work with UUIDs
uuid = { version = "1.12.1" }

apx_sdk = { path = "../apx_sdk" }
mitra_activitypub = { path = "../mitra_activitypub" }
mitra_adapters = { path = "../mitra_adapters" }
mitra_config = { path = "../mitra_config" }
mitra_models = { path = "../mitra_models" }
mitra_services = { path = "../mitra_services" }
mitra_utils = { path = "../mitra_utils" }

[lints]
workspace = true
